--- a/src/main/webapp/iframe_orderTallyInfo.html
+++ b/src/main/webapp/iframe_orderTallyInfo.html
@@ -19,7 +19,7 @@
         var form = layui.form, $ = layui.$, table = layui.table, tally = {}, tallyInfo = {};
 
         $(function () {
-            tallyInfo = JSON.parse(sessionStorage.getItem('tallyInfo2'));
+            tallyInfo = JSON.parse(sessionStorage.getItem('orderTallyInfo'));
             setTimeout(function () {
                 var arr = []
                 arr.push(tallyInfo);
