--- a/src/main/webapp/member.html
+++ b/src/main/webapp/member.html
@@ -105,8 +105,7 @@
                     }},
                 {field: 'phone', title: '手机号', minWidth: 120, align: 'center'},
                 {field: 'address', title: '地址', minWidth: 120, align: 'center'},
-                {field: 'source', title: '来源', minWidth: 80, align: 'center'},
-                {field: 'cartName', title: '卡类型', minWidth: 80, align: 'center'},
+                {field: 'memberLevelName', title: '卡类型', minWidth: 100, align: 'center'},
                 {field: 'birthday', title: '生日', minWidth: 110, align: 'center'},
                 {field: 'storedValue', title: '储值', minWidth: 120, align: 'center'},
                 {field: 'integral', title: '积分', minWidth: 120, align: 'center'},
