--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>角色设置</title>
+    <title>账户管理</title>
     <script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <nav class="hotel-nav">
 
-    <ul class="layui-nav " lay-filter="" id="navMenu"></ul>
+    <ul class="layui-nav " lay-filter="" id="navMenu">
+
+
+    </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
             <a href="javascript:;" id="hotelusername"></a>
@@ -27,17 +30,20 @@
     </ul>
 </nav>
 <div style="height: 70px;"></div>
-<form class="layui-form">
-    <div class="layui-form-item" style="padding-top: 5px;">
-        <div class="layui-inline">
-            <label class="layui-form-label">角色名</label>
-            <div class="layui-input-inline">
-                <input type="text" name="roleName" placeholder="请输入角色名" autocomplete="off"
-                       class="layui-input">
-            </div>
+<form class="layui-form" style="padding-top: 10px">
+    <div class="layui-form-item">
+        <label class="layui-form-label">用户名</label>
+        <div class="layui-input-inline">
+            <input type="text" name="userName" placeholder="请输入用户名" autocomplete="off" class="layui-input">
         </div>
-        <div class="layui-inline">
-            <button class="layui-btn layui-btn-sm layui-btn-fluid" lay-submit lay-filter="formData">查询</button>
+        <label class="layui-form-label">角色</label>
+        <div class="layui-input-inline">
+            <select id="roleId" name="roleId">
+                <option value="">全部</option>
+            </select>
+        </div>
+        <div class="layui-input-inline">
+            <button class="layui-btn" lay-submit="" lay-filter="formData">查询</button>
         </div>
     </div>
 </form>
@@ -45,27 +51,29 @@
     <button class="layui-btn layui-btn-sm layui-btn-fluid" id="addItem">新增</button>
 </div>
 <div class="tab-box">
-    <table id="roleManage" lay-filter="roleManage" class="layui-table"></table>
+    <table id="adminManage" lay-filter="adminManage" class="layui-table"></table>
 </div>
+<script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    {{#  if(d.id !== 1 ){ }}
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    {{#  if(d.id !== 1 ){ }}
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-    {{# } else { }}
-        超级管理员禁止操作
     {{# } }}
 </script>
-<script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    layui.use(['table', 'form'], function () {
-        var table = layui.table, $ = layui.$, form = layui.form;
+    layui.use(['form', 'jquery', 'table', 'laydate'], function () {
+        var form = layui.form, $ = layui.$, table = layui.table;
 
+        $(function () {
+            renderSelect('roleId', 'id', 'roleName', api.roleAll+'?v=1', form);
+        });
 
-        //初始化表格数据
         var tab = table.render({
-            elem: '#roleManage'
+            elem: '#adminManage'
+            , url: api.admin
+            , even: true
+            , page: true
             , method: 'POST'
-            , url: api.roleAllData
             , request: {
                 pageName: 'pageNo'
                 , limitName: 'pageSize'
@@ -82,61 +90,26 @@
                     "code": 200, //解析接口状态
                     "msg": res.errMsg, //解析提示文本
                     "count": res.data.count, //解析数据长度
-                    "data": res.data.data //解析数据列表
+                    "data": res.data.adminBOList //解析数据列表
                 };
             }
-            , height: 'full'
-            , even: true
             , loading: true // 是否显示加载条
-            , cols: [[ //表头
-                {field: 'roleName', title: '角色名', align: 'center'}
+            , cols: [[ //标题栏
+                {field: 'name', title: '用户名', align: 'center'}
+                , {field: 'mobile', title: '手机号', align: 'center'}
+                , {field: 'roleName', title: '角色名称', align: 'center'}
                 , {
-                    field: 'menus', title: '菜单权限', align: 'center', templet: function (data) {
-                        return formatMenus(data.menus);
-                    }
-                }
-                , {
-                    field: 'hotels', title: '酒店权限', align: 'center', templet: function (data) {
-                        var nameArr = [];
-                        for (var i = 0, len = data.hotels.length; i < len; i++) {
-                            nameArr.push(data.hotels[i].name);
-                        }
-                        return nameArr.join(' , ');
+                    field: 'createTime', title: '创建时间', align: 'center', templet: function (data) {
+                        return data.createTime ? DateToLStr(new Date(data.createTime.time)) : '';
                     }
                 }
                 , {fixed: 'right', title: '操作', align: 'center', toolbar: '#barDemo'}
             ]]
         });
 
-        function formatMenus(data) {
-            var newArr = [];
-            for (var i = 0, len = data.length; i < len; i++) {
-                newArr.push(data[i].menuName);
-                if (data[i].children && data[i].children.length > 0) {
-                    for (var j = 0, jLen = data[i].children.length; j < jLen; j++){
-                        newArr.push(data[i].children[j].menuName);
-                    }
-                }
-            }
-            return newArr.join(' , ');
-        }
-
-        //监听查询按钮提交
-        form.on('submit(formData)', function (data) {
-            tab.reload({
-                method: 'POST',
-                where: {
-                    roleName: data.field.roleName
-                },
-                page: {
-                    curr: 1 //重新从第 1 页开始
-                }
-            });
-            return false;
-        });
 
         //表格操作按钮
-        table.on('tool(roleManage)', function (obj) { //tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
+        table.on('tool(adminManage)', function (obj) { //tool是工具条事件名，test是table原始容器的属性 lay-filter="对应的值"
             var data = obj.data; //获得当前行数据
             var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
             var tr = obj.tr; //获得当前行 tr 的DOM对象
@@ -144,9 +117,9 @@
             if (layEvent === 'del') { //删除
                 layer.confirm('确定要删除么', function (index) {
                     $.ajax({
-                        url: api.roleDelete,
+                        url: api.delAdmin,
                         data: {
-                            roleIds: JSON.stringify([data.id])
+                            idArr: JSON.stringify([data.id])
                         },
                         type: 'POST',
                         dataType: 'json',
@@ -157,15 +130,15 @@
                     layer.close(index);
                 });
             } else if (layEvent === 'edit') { //编辑
-                sessionStorage.setItem('roleItem', JSON.stringify(data));
+                sessionStorage.setItem('adminItem', JSON.stringify(data));
                 layer.open({
                     type: 2,
                     skin: 'demo-class',
-                    area: ['700px', '600px'],
+                    area: ['400px', '500px'],
                     title: '编辑',
                     shade: 0.6,
                     shadeClose: true,
-                    content: 'iframe_roleInfo.html?s=1',
+                    content: 'iframe_admin.html?s=1',
                     end: function (index, layero) {
                         sessionStorage.removeItem('roleItem');
                         tab.reload();//刷新表格
@@ -179,15 +152,27 @@
             layer.open({
                 type: 2,
                 skin: 'demo-class',
-                area: ['700px', '600px'],
+                area: ['400px', '500px'],
                 title: '新增',
                 shade: 0.6,
                 shadeClose: true,
-                content: 'iframe_roleInfo.html',
+                content: 'iframe_admin.html',
                 end: function (index, layero) {
                     tab.reload();//刷新表格
                 }
             });
+        });
+
+        //监听查询按钮提交
+        form.on('submit(formData)', function (data) {
+            tab.reload({
+                method: 'POST',
+                where: data.field,
+                page: {
+                    curr: 1 //重新从第 1 页开始
+                }
+            });
+            return false;
         });
     });
 </script>
