--- a/src/main/webapp/member_info.html
+++ b/src/main/webapp/member_info.html
@@ -42,12 +42,11 @@
         //头工具栏事件
         table.on('toolbar(memberInfo)', function (obj) {
             var checkStatus = table.checkStatus(obj.config.id), data = checkStatus.data;
-            console.log(obj.event)
             switch (obj.event) {
                 case 'consumptionDetail':
                     tab.reload({
-                        url: '/integral/queryUserInformation'
-                        , where: {userId: id}
+                        url: '/member/getConsumptionRecord'
+                        , where: {memberId: id}
                         , method: 'POST'
                         , page: {
                             curr: 1 //重新从第 1 页开始
@@ -68,17 +67,17 @@
                                 "code": 200, //解析接口状态
                                 "msg": res.errMsg, //解析提示文本
                                 "count": res.data.count, //解析数据长度
-                                "data": res.data.data //解析数据列表
+                                "data": res.data.consumptionRecordBOS //解析数据列表
                             };
                         }
                         , cols: [[
                             {field: 'roomName', title: '房间号', minWidth: 80, align: 'center'},
-                            {field: 'type', title: '类型', minWidth: 80, align: 'center'},
-                            {field: 'single', title: '组单', minWidth: 80, align: 'center'},
-                            {field: 'guestList', title: '客单', minWidth: 80, align: 'center'},
+                            {field: 'payType', title: '支付方式', minWidth: 80, align: 'center', templet: function (data) {
+                                    return orderPayType(data.payType);
+                                }},
+                            {field: 'orderNumber', title: '单号', minWidth: 80, align: 'center'},
                             {field: 'OTA', title: 'OTA', minWidth: 80, align: 'center'},
-                            {field: 'voucher', title: '原始凭证', minWidth: 120, align: 'center'},
-                            {field: 'price', title: '交易金额', minWidth: 80, align: 'center'},
+                            {field: 'money', title: '交易金额', minWidth: 120, align: 'center'},
                             {field: 'project', title: '交易项目', minWidth: 80, align: 'center'},
                             {
                                 field: 'createTime',
@@ -90,7 +89,7 @@
                                 }
                             },
                             {field: 'remark', title: '备注', minWidth: 80, align: 'center'},
-                            {field: 'operator', title: '收银员', minWidth: 80, align: 'center'}
+                            {field: 'name', title: '收银员', minWidth: 80, align: 'center'}
                         ]]
                     });
                     break;
