--- a/src/main/webapp/iframe_modifyPriceYYRZ.html
+++ b/src/main/webapp/iframe_modifyPriceYYRZ.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>预约入住价格修改</title>
+	<title>直接入住价格修改</title>
 	<script src="js/loadcss.js" type="text/javascript" charset="utf-8"></script>
 	<style>
 		input::-webkit-outer-spin-button,
